<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pe.idat.creacionescarrasco.ui.Inicio.InicioEFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio_empleado" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="pe.idat.creacionescarrasco.ui.Registro.AsistenciaEFragment"
        android:label="@string/title_registro"
        tools:layout="@layout/fragment_asistencia_empleado" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="pe.idat.creacionescarrasco.ui.Cuenta.CuentaEFragment"
        android:label="@string/title_cuenta"
        tools:layout="@layout/fragment_cuenta_empleado" />
</navigation>