<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Registro.AsistenciaEFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="60px"
        android:paddingRight="60px">

        <ProgressBar
            android:id="@+id/pb1"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="2px"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idTituloRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ValRegistro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEntrada"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/ValEntrada"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTituloRegistro" />

        <Button
            android:id="@+id/btnAlmuerzo"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/ValAlmuerzo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:translationZ="1px"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEntrada" />

        <Button
            android:id="@+id/btnFinAlmuerzo"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/ValFinAlmuerzo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAlmuerzo" />

        <Button
            android:id="@+id/btnSalida"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/ValSalida"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFinAlmuerzo" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="Hora personalisada/developer"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingBottom="300px"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSalida" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>